attempt to merge project 2 and 3 manually

--- a/front end/LegacyFrontEnd/src/CSS/ShopPage.css
+++ b/front end/LegacyFrontEnd/src/CSS/ShopPage.css
@@ -16,3 +16,8 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+
+.filler {
+  height: 150px; /* Adjust this height to match the height of your navbar */
+}
